Added Update/Delete directives in OpenAPI definition amd scaffolded corresponding methods in Refugees amd Hosts API
